--- a/layouts/index.html
+++ b/layouts/index.html
@@ -31,12 +31,12 @@
       </div>
       <div class="col-6">
           <a class="button button-primary mb-2" href="/faq">
-          Lire la FAQ
+          Read our FAQ
         </a>
       </div>
       <div class="col-6">
           <a class="button button-primary mb-2" href="/cve">
-          Voir les CVE
+          CVE list
         </a>
       </div>
     </div>
