--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,11 +22,7 @@
       <div class="col-12">
         <h1 class="title">{{ .Title | default .Site.Title }}</h1>
         <div class="content">
-          {{ if .Content }}
           {{ .Content }}
-          {{ else }}
-          <p>{{ .Site.Params.homepage_intro }}</p>
-          {{ end }}
         </div>
       </div>
       <div class="col-6">
@@ -36,7 +32,7 @@
       </div>
       <div class="col-6">
           <a class="button button-primary mb-2" href="/cve">
-          CVE list
+          CVE list and advisories
         </a>
       </div>
     </div>
