Multilingual (to improve) + Advisories section + remove side panel

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,14 +25,15 @@
           {{ .Content }}
         </div>
       </div>
-      <div class="col-6">
-          <a class="button button-primary mb-2" href="/faq">
-          Read our FAQ
+      <div class="col-12">
+        <a class="button button-primary main-menu mb-2" href="/faq">
+          FAQ
         </a>
-      </div>
-      <div class="col-6">
-          <a class="button button-primary mb-2" href="/cve">
-          CVE list and advisories
+        <a class="button button-primary main-menu mb-2" href="/advisories">
+          Advisories
+        </a>
+        <a class="button button-primary main-menu mb-2" href="/cve">
+          CVE
         </a>
       </div>
     </div>
