--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,7 @@
 
 {{ define "main" }}
 <div class="strip">
-  <div class="mb-16 home-container">
+  <div class="mb-16">
     <div class="row">
       <div class="col-12">
         <h1 class="title">{{ .Title | default .Site.Title }}</h1>
