sos-developers.com - Ticket n°24646: Redirection https://security.profileo.com/advisories/prestascansecurity/ ?
Add redirection to prestascan

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+{{ if .Params.redirect }}
+<meta http-equiv="refresh" content="0; url={{ .Params.redirect }}" />
+{{ else }}
 <html lang="en">
 
 <head>
@@ -60,3 +63,4 @@
 </body>
 
 </html>
+{{ end }}
